# hdulib

./: .gitignore  .pre-commit-config.yaml  extract_rooms.py  main.py  pyproject.toml  requirements.txt  test_json_cache.py
.github/workflows/: workflow.yml
data/: rooms_cache.json
utils/: api_client.py  booking_service.py  cli.py  config.py  config.toml  console.py  hdulib.py  models.py
