[project]
name = "hdulib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "rich>=14.0.0",
    "toml>=0.10.2",
    "typer>=0.16.0",
]
